# everything_in_x

./: README.md  prek.toml
.github/workflows/: release-deploy-to-azure.yml
aws/lambda_stacks/: app.py  definition.yml  deploy.sh
azure/ProgressiveWorkout/: .gitignore  Directory.Packages.props  Makefile  ProgressiveWorkout.slnx
cloud/azure/: .gitignore
csharp/: .gitignore
csharp/EverythingServer/: EverythingServer.slnx
fin_eng/: .gitignore
gamedev/pydownstack/: main.py  pyproject.toml  settings.yml
gamedev/pydownstack/src/pydownstack/: inbound_ports.py  outbound_ports.py
gamedev/pydownstack/src/pydownstack/domain/: mino.py  rotation.py
gamedev/pydownstack/src/pydownstack/game/: actions.py  bag.py  board.py  config.py  engine.py  events.py  game_state.py  grid.py  piece.py  scoring.py  settings.py
gamedev/pydownstack/src/pydownstack/resources/: controls.yml  guideline.yml
gamedev/pydownstack/src/pydownstack/visual/: frame_data.py  input_handler.py  renderer.py  yaml_settings.py
gamedev/pydownstack/tests/: conftest.py  test_bag.py  test_board.py  test_config.py  test_engine.py  test_input_handler.py  test_piece.py
languages/rust/cli/cat-rs/: Cargo.toml
languages/rust/cli/echo-rs/: Cargo.toml
languages/rust/cli/echo-rs/src/: main.rs
languages/rust/cli/echo-rs/tests/: cli.rs
languages/rust/ctl-rs/crates/ctl-options/: Cargo.toml
languages/rust/ctl-rs/crates/ctl-options/src/: lib.rs
lc_soln/: .gitignore  README.md
lc_soln/0001_two_sum/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0003_longest_substring_without_repeating_characters/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0011_container_with_most_water/: problem.toml  solution.cpp  solution.cs  solution.py
lc_soln/0014_longest_common_prefix/: problem.toml
lc_soln/0015_3sum/: problem.toml  solution.cs  solution.py  solution.rs
lc_soln/0016_3sum_closest/: problem.toml  solution.cpp  solution.py
lc_soln/0018_4sum/: problem.toml  solution.cpp  solution.py
lc_soln/0020_valid_parentheses/: problem.toml  soluion.py  solution.cpp  solution.cs  solution.rs
lc_soln/0036_valid_sudoku/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0037_sudoku_solver/: problem.toml  solution.cpp  solution.py
lc_soln/0042_trapping_rain_water/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0049_group_anagrams/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0076_minimum_window_substring/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0084_largest_rectangle_in_histogram/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0115_min_stack/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0121_best_time_to_buy_and_sell_stock/: problem.toml  solution.cpp  solution.cs
lc_soln/0122_best_time_to_buy_and_sell_stock_ii/: problem.toml  solution.cpp
lc_soln/0123_best_time_to_buy_and_sell_stock_iii/: problem.toml  solution.cpp  solution.py
lc_soln/0125_valid_palindrome/: problem.toml  solution.cs
lc_soln/0128_longest_consecutive_sequence/: problem.toml  solution.cpp  solution.cs  solution.rs
lc_soln/0150_evaluate_reverse_polish_notation/: problem.toml  solution.cpp  solution.cs
lc_soln/0152_maximum_product_subarray/: problem.toml  solution.cpp  solution.py
lc_soln/0167_two_sum_ii_input_array_is_sorted/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0169_majority_element/: problem.toml  solution.cpp  solution.py  solution.rs
lc_soln/0189_rotate_array/: problem.toml  solution.cpp  solution.py
lc_soln/0209_minimum_size_subarray_sum/: problem.toml  solution.cpp  solution.py
lc_soln/0215_kth_largest_element_in_an_array/: problem.toml  solution.cpp  solution.py
lc_soln/0217_contains_duplicate/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0238_products_of_array_except_self/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0239_sliding_window_maximum/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0242_valid_anagram/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0271_encode_and_decode_strings/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0347_top_k_frequent_elements/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0424_longest_repeating_character_replacement/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0567_permutation_in_string/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0739_daily_temperatures/: problem.toml  solution.cpp  solution.cs  solution.py  solution.rs
lc_soln/0853_car_fleet/: problem.toml  solution.cpp  solution.cs  solution.py  (+1 more)
rust/cli/echo-rs/: Cargo.toml
rust/cli/echo-rs/src/: main.rs
rust/cli/head-rs/: Cargo.toml
rust/cli/head-rs/src/: lib.rs  main.rs
rust/cli/wc-rs/: Cargo.toml
rust/cli/wc-rs/src/: lib.rs  main.rs
rust/cli/wc-rs/tests/: cli.rs
rust/ctl-rs/: Cargo.toml
rust/ctl-rs/crates/ctl/: Cargo.toml
rust/ctl-rs/crates/ctl-aws-types/src/: lib.rs
rust/ctl-rs/crates/ctl-cache/src/: lib.rs
rust/ctl-rs/crates/ctl-cli/src/: lib.rs
rust/ctl-rs/crates/ctl-dirs/: Cargo.toml
rust/ctl-rs/crates/ctl-dirs/src/: lib.rs
rust/ctl-rs/crates/ctl-options/src/: lib.rs
rust/ctl-rs/crates/ctl/src/: lib.rs  main.rs  process.rs  settings.rs
rust/ctl-rs/crates/ctl/src/commands/: mod.rs
rust/ctl-rs/crates/ctl/src/commands/aws/: mod.rs  up.rs
rust/ctl-rs/crates/ctl/src/commands/lambda/: display.rs  find.rs
rust/ctl-rs/old/: cache.rs  config.rs  dirs.rs  settings.rs  types.rs
rust/ctl-rs/old/commands/: mod.rs
rust/dev-rs/: Cargo.toml
rust/dev-rs/src/: cache.rs  config.rs  dirs.rs  lib.rs  main.rs  settings.rs  types.rs
rust/dev-rs/src/commands/: mod.rs
rust/dev-rs/src/commands/lambda/: display.rs  fetch.rs  find.rs  mod.rs
rust/notify-send/: Cargo.toml
(+168 files in other folders)
