[project]
name = "pydownstack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame-ce>=2.5.7",
    "pyyaml>=6.0.3",
]

[tool.basedpyright]
reportAny = "none"
reportExplicitAny = "none"
executionEnvironments = [
    { root = "tests", reportPrivateUsage = false, reportUnusedCallResult = false },
    { root = "src" },
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
