[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.89"

[workspace.dependencies]
ctl-aws-types = { path = "crates/ctl-aws-types" }
ctl-cache = { path = "crates/ctl-cache" }
ctl-cli = { path = "crates/ctl-cli" }
ctl-dirs = { path = "crates/ctl-dirs" }
ctl-options = { path = "crates/ctl-options" }

anyhow = { version = "1.0.100" }
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-cloudformation = { version = "1.94.0" }
clap = { version = "4.5.48", features = ["derive"] }
etcetera = { version = "0.10.0" }
fs-err = { version = "3.1.2" }
futures = { version = "0.3.31" }
saphyr = { version = "0.0.6" }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = { version = "1.0.145" }
thiserror = { version = "2.0.16" }
tokio = { version = "1.47.1", features = ["full"] }
toml = { version = "0.9.7" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20" }
webbrowser = { version = "1.0.5" }

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
if_not_else = "allow"
use_self = "warn"
