[package]
name = "dev-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "~1.0" }
clap = { version = "~4.5", features = ["derive"] }
etcetera = { version = "~0.10" }
fs-err = { version = "~3.1" }
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0" }
toml = { version = "~0.9" }
