[package]
name = "dev-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "~1.0" }
aws-config = { version = "~1.8", features = ["behavior-version-latest"] }
aws-sdk-cloudformation = { version = "~1.94" }
clap = { version = "~4.5", features = ["derive"] }
etcetera = { version = "~0.10" }
fs-err = { version = "~3.1" }
futures = { version = "~0.3" }
saphyr = { version = "0.0.6" }
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0" }
tokio = { version = "~1.47", features = ["full"] }
toml = { version = "~0.9" }
tracing = { version = "~0.1" }
tracing-subscriber = { version = "~0.3" }
