[package]
name = "notify-send"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true


[dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Foundation_Collections", "Win32_System_SystemInformation", "Data_Xml_Dom", "UI_Notifications"] }
xml-rs = "1.0.0"
