[package]
name = "head-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "head"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bitflags = "2.9.1"
clap = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
parameterized = { workspace = true }
predicates = { workspace = true }
