[package]
name = "wc-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wc"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
parameterized = { workspace = true }
predicates = { workspace = true }
