[package]
name = "cat-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cat"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
parameterized = { workspace = true }
predicates = { workspace = true }
