[package]
name = "echo-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "echo"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_cmd = { workspace = true }
parameterized = { workspace = true }
predicates = { workspace = true }
