[package]
name = "ctl"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
default-run = "ctl"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
