[package]
name = "ctl"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
default-run = "ctl"

[lints]
workspace = true

[dependencies]
ctl-aws-types = { workspace = true }
ctl-cache = { workspace = true }
ctl-cli = { workspace = true }
ctl-dirs = { workspace = true }
ctl-options = { workspace = true }

anyhow = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-cloudformation = { workspace = true }
clap = { workspace = true, features = ["derive"] }
fs-err = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
saphyr = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
webbrowser = { workspace = true }
