[package]
name = "ctl-options"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
ctl-aws-types = { workspace = true }
ctl-dirs = { workspace = true }

fs-err = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
